--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,13 +13,13 @@ layout: default
       {%- if page.author -%}
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
       {%- endif -%}</p>
-      <div class="post-tags">
-        {%- if page.tags -%}
-          {%- for tag in page.tags -%}
-            <a href="/tags/{{ tag }}/">{{ tag }} </a>
-         {%- endfor -%}
-        {%- endif -%}
-      </div>
+      <p class="post-tags">
+        {% if page.tags %}
+          {% for tag in page.tags %}
+            <a class="btn btn-sm btn-outline" href="/tags/{{ tag }}/">{{ tag }}</a>
+          {% endfor %}
+        {% endif %}
+      </p>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
@@ -63,14 +63,9 @@ layout: default
     
   </div>
 
-  <script src="https://utteranc.es/client.js"
-        repo="p0rkjello/p0rkjello.github.io"
-        issue-term="title"
-        label="💬"
-        theme="github-light"
-        crossorigin="anonymous"
-        async>
-  </script>
+  {%- if site.utterances.repo -%}
+    {%- include utterances.html -%}
+  {%- endif -%}
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
