related posts update

--- a/_includes/utterances.html
+++ b/_includes/utterances.html
@@ -1,6 +1,7 @@
 <div class="utterances">
-    <script src="https://utteranc.es/client.js"
-        repo='{{ site.utterances.repo }}'
+    <script
+        src="https://utteranc.es/client.js"
+        repo="{{ site.utterances.repo }}"
         issue-term='{{ site.utterances.issue_term | default: "pathname" }}'
         label="💬"
         theme='{{ site.utterances.theme | default: "github-light" }}'
