--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,6 @@
 
 @import "minima-{{ site.minima.skin | default: 'classic' }}";
 
-// replace header border-top
-body {
-border-top: 5px solid #424242;
+.markdown-body {
+    flex: 1 0 auto;
 }
