--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: default
 ---
 <!-- We're going to give each page a tag when we create it. This will be the title -->
 <h1>{{ page.tag | capitalize }}</h1>
