--- a/_includes/utterances.html
+++ b/_includes/utterances.html
@@ -1,4 +1,5 @@
 <div class="utterances">
+  <h2>Leave a comment</h2>
   <script
     src="https://utteranc.es/client.js"
     repo="{{ site.utterances.repo }}"
