--- a/_includes/support.html
+++ b/_includes/support.html
@@ -1,5 +1,7 @@
 <div class="Support">
   <h3>
-    Helpful? If you’d like to [support](https://paypal.me/asbounds) me so I can continue to provide free content, click a button below. 
+    Did you find this post helpful? If you’d like to
+    <a href="https://paypal.me/asbounds">support</a> me so I can continue to
+    provide free content, click a button below.
   </h3>
 </div>
