--- a/_includes/support.html
+++ b/_includes/support.html
@@ -1,5 +1,6 @@
 <div class="Support">
-  <h3>
-    Helpful? If you’d like to [support](https://paypal.me/asbounds) me so I can continue to provide free content, click a button below. 
-  </h3>
+  <h3>Did you find this post helpful? Consider buying me a cup of coffee.</h3>
+  <p>
+    <a href="https://paypal.me/asbounds"><img src="https://img.shields.io/badge/Donate-PayPal-green.svg" alt="Donate"></a>
+  </p>
 </div>
