--- a/_includes/page_related.html
+++ b/_includes/page_related.html
@@ -1,5 +1,5 @@
 <div class="related-posts">
-  <h2>Related posts</h2>
+  <h2>Possibly related posts</h2>
   <ul>
   {% for related_post in site.related_posts limit: 3 %}
     <li><a href="{{ related_post.url }}">{{ related_post.title | markdownify | remove: '<p>' | remove: '</p>' }}</a></li>
