--- a/_includes/utterances.html
+++ b/_includes/utterances.html
@@ -1,5 +1,5 @@
 <div class="utterances">
-  <h2>Comments and questions</h2>
+  <h2>Questions and comments</h2>
   <script
     src="https://utteranc.es/client.js"
     repo="{{ site.utterances.repo }}"
